Fix toolbar separator alignment, remove tabbar margin left
Former-commit-id: b726337ed46ac2475bf19f27cfe1dd521b431114 [formerly 245b6dc14ae05c5b36b2248b241dd9f854d88d08]
Former-commit-id: b7a6d86160683950467314a5ba05168f2c1a5619

--- a/src/renderer/app/scss/toolbar.scss
+++ b/src/renderer/app/scss/toolbar.scss
@@ -1,6 +1,7 @@
 .toolbar {
   position: relative;
   z-index: 100;
+  align-items: center;
   display: flex;
   flex-flow: row;
   background-color: #fff;
